--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/Pedrolego/clean-api/issues"
   },
-  "homepage": "https://github.com/Pedrolego/clean-api#readme"
+  "homepage": "https://github.com/Pedrolego/clean-api#readme",
+  "devDependencies": {
+    "standard": "^14.3.3"
+  }
 }
