--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "lint-staged": {
+    "*.js": [
+      "standard --fix "
+    ]
+  },
+  "husky":{
+    "hooks":{
+      "pre-commit": "lint-staged"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Pedrolego/clean-api.git"
@@ -17,6 +27,8 @@
   },
   "homepage": "https://github.com/Pedrolego/clean-api#readme",
   "devDependencies": {
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.0",
     "standard": "^14.3.3"
   }
 }
