--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "clean-architectureapi",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "lint-staged": {
     "*.js": [
@@ -12,8 +12,8 @@
       "git add"
     ]
   },
-  "husky":{
-    "hooks":{
+  "husky": {
+    "hooks": {
       "pre-commit": "lint-staged"
     }
   },
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/Pedrolego/clean-api#readme",
   "devDependencies": {
     "husky": "^4.2.5",
+    "jest": "^26.0.1",
     "lint-staged": "^10.2.0",
     "standard": "^14.3.3"
   }
