--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
   "scripts": {
     "test": "jest"
   },
+
+  "standard": {
+    "env": ["jest"]
+  },
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Pedrolego/clean-api.git"
   },
+  
   "author": "",
   "license": "ISC",
   "bugs": {
