--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watchAll",
-    "teststaged": "jest"
+    "teststaged": "jest --passWithNoTests"
   },
 
   "standard": {
