--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch --noStackTrace",
-    "teststaged": "jest --passWithNoTests --FindRelatedTests --silent"
+    "teststaged": "jest --passWithNoTests --FindRelatedTests --silent",
+    "test:ci": "jest --coverage"
   },
 
   "standard": {
