--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "clean-architectureapi",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch --noStackTrace",
-    "teststaged": "jest --passWithNoTests --FindRelatedTests --silent --noStackTrace",
-    "test:ci": "jest --coverage --noStackTrace --silent"
+    "test": "jest --silent --noStackTrace --passWithNoTests" ,
+    "test:unit" :"npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests ",
+    "test:ci": "npm test  -- --coverage "
   },
 
   "standard": {
